// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Launchpad's identifyUser destination action: all fields 1`] = `
Object {
  "$ip": "5SpoCjYek1jtNwUC",
  "$set": Object {
    "testType": "5SpoCjYek1jtNwUC",
  },
  "api_key": "5SpoCjYek1jtNwUC",
  "distinct_id": "5SpoCjYek1jtNwUC",
  "event": "$identify",
  "type": "screen",
}
`;

exports[`Testing snapshot for Launchpad's identifyUser destination action: required fields 1`] = `
Object {
  "$set": Object {
    "testType": "5SpoCjYek1jtNwUC",
  },
  "api_key": "5SpoCjYek1jtNwUC",
  "event": "$identify",
  "type": "screen",
}
`;
